--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
                     <span class="logo_bracket bracket-closed">}</span>
                 </div>
 
-                <p class="section__text roboto-regular">Algo interesante sobre mi Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim
-                    id, sodales vehicula velit. Aenean lobortis posuere tristique. Phasellus placerat arcu elementum
-                    nisi ultrices cursus.
-                    Etiam sit amet aliquet lacus. Integer ut iaculis augue, sit amet tincidunt ex. In eleifend justo et
-                    sodales semper.
-                    Mauris nec tortor lectus. Curabitur nec ultricies dolor.</p>
+                <p class="section__text roboto-regular">Desarrollador fullstack apasionado, dedicado a crear soluciones
+                    digitales innovadoras y atractivas que satisfagan las necesidades del cliente. El objetivo es
+                    brindar soluciones de alta calidad enfocadas en la experiencia del
+                    usuario, utilizando tecnologías modernas para garantizar la eficiencia de los sistemas y
+                    aplicaciones.
+                </p>
                 <img src="/img/check.svg" alt="imagen de check" class="section__check-img">
                 <!-- </div> -->
 
@@ -82,26 +81,27 @@
                 <div class="section__card">
                     <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
-                    <h2 class="section__title roboto-bold">Hago cosas</h2>
-                    <p class="section__text roboto-regular">Algo interesante sobre mi Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim
-                        id, sodales vehicula velit. Aenean lobortis posuere tristique.</p>
+                    <h2 class="section__title roboto-bold">Aplicaciones Web</h2>
+                    <p class="section__text roboto-regular">Desarrollo de plicaciones web modernas y responsivas
+                        utilizando tecnologías como HTML, CSS y Javascript; desde interfaces de usuario atractivas hasta
+                        funcionalidades robustas de backend con Node.js y express.</p>
                 </div>
                 <div class="section__card">
                     <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
-                    <h2 class="section__title roboto-bold">Hago cosas</h2>
-                    <p class="section__text roboto-regular">Algo interesante sobre mi Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim
-                        id, sodales vehicula velit. Aenean lobortis posuere tristique.</p>
+                    <h2 class="section__title roboto-bold">Optimización SEO</h2>
+                    <p class="section__text roboto-regular">mejoramiento del rendimiento y la visibilidad de
+                        aplicaciones web, optimizando el código para una carga rápida y mejor
+                        ranking en los motores de búsqueda.</p>
                 </div>
                 <div class="section__card">
                     <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
-                    <h2 class="section__title roboto-bold">Hago cosas</h2>
-                    <p class="section__text roboto-regular">Algo interesante sobre mi Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Nulla dui quam, sollicitudin at enim
-                        id, sodales vehicula velit. Aenean lobortis posuere tristique.</p>
+                    <h2 class="section__title roboto-bold">Mantenimiento</h2>
+                    <p class="section__text roboto-regular">Servicios de mantenimiento, actualización y refactorización
+                        adecuadas, asegurando
+                        el funcionamiento con las últimas tecnologías y mejoramiento en el
+                        performance.</p>
                 </div>
 
 
@@ -145,15 +145,15 @@
             <p class="footer__copyright roboto-regular">®️ Orcodev 2022</p>
             <div class="social__icons">
 
-                <a href="" class="social__icon">
+                <a href="https://www.instagram.com/orcodev.fullstack/" class="social__icon">
                     <img src="/img/ig.svg" alt="instagram icon" class="social__icon-img">
                     <span class="social__icon-text">Instagram</span>
                 </a>
-                <a href="" class="social__icon">
+                <a href="https://www.linkedin.com/in/orlando-camacho/" class="social__icon">
                     <img src="/img/link.svg" alt="linkedin icon" class="social__icon-img">
                     <span class="social__icon-text">Linkedin</span>
                 </a>
-                <a href="" class="social__icon">
+                <a href="https://twitter.com/OCamacho2012" class="social__icon">
                     <img src="/img/git.svg" alt="Github icon" class="social__icon-img">
                     <span class="social__icon-text">Twitter</span>
                 </a>
