Refactorizacion detalles mobile size. adicion de opciones al menu y mejora en las vistas de secciones

--- a/index.html
+++ b/index.html
@@ -33,29 +33,35 @@
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
                 <div class="nav__menu--mobile">
+                    <a href="#inicio" class="nav__item open-sans-700">Inicio</a>
                     <a href="#acerca-de-mi" class="nav__item open-sans-700">Acerca de mi</a>
                     <a href="#servicios" class="nav__item open-sans-700">Servicios</a>
                     <a href="#contacto" class="nav__item open-sans-700">Contacto</a>
+                    <a href="#social" class="nav__item open-sans-700">Social</a>
                 </div>
                 <div class="nav__menu--desktop">
+                    <a href="#inicio" class="nav__item open-sans-700">Inicio</a>
                     <a href="#acerca-de-mi" class="nav__item open-sans-700">Acerca de mi</a>
                     <a href="#servicios" class="nav__item open-sans-700">Servicios</a>
                     <a href="#contacto" class="nav__item open-sans-700">Contacto</a>
+                    <a href="#social" class="nav__item open-sans-700">Social</a>
                 </div>
             </div>
         </nav>
         <main>
-            <header>
+            <header id="inicio">
                 <!-- <div class="header__mask"></div> -->
-                <div class="header__patron-puntos"></div>
+                <div class="patron-puntos"></div>
                 <!-- </div> -->
-                <h1 class="header__title open-sans-700">Bienvenidos a mi Website</h1>
-                <img src="/img/orcodev-final.png" alt="imagen de orcodev" class="header__img-orcodev">
+                <h1 class="title open-sans-700">Bienvenidos a mi Website</h1>
+                <img src="/img/orcodev-final.png" alt="imagen de orcodev" class="img-orcodev">
             </header>
             <section class="section__aboutme" id="acerca-de-mi">
                 <!-- <div class="section-card"> -->
-                <h2 class="section__title open-sans-700">Soy</h2>
-                <h2 class="section__title open-sans-700">Orlando Camacho</h2>
+                <div>
+                    <h2 class="section__title open-sans-700">Soy</h2>
+                    <h2 class="section__title open-sans-700">Orlando Camacho</h2>
+                </div>
                 <div class="logo-orcodev">
                     <span class="logo_bracket bracket-open">{</span>
                     <span class="logo_or-text">or</span>
@@ -124,7 +130,7 @@
                     </form>
                 </section>
         </main>
-        <footer class="roboto-regular">
+        <footer class="roboto-regular" id="social">
             <div class="nav__logo">
                 <div class="logo-orcodev">
                     <span class="logo_bracket bracket-open">{</span>
