Cambios en index.html. Design de Desktop size y rafactorizacion de espacios y proporciones.

--- a/index.html
+++ b/index.html
@@ -57,29 +57,29 @@
                 <img src="/img/orcodev-final.png" alt="imagen de orcodev" class="img-orcodev">
             </header>
             <section class="section__aboutme" id="acerca-de-mi">
-                <!-- <div class="section-card"> -->
-                <div>
-                    <h2 class="section__title open-sans-700">Soy</h2>
-                    <h2 class="section__title open-sans-700">Orlando Camacho</h2>
-                </div>
-                <div class="logo-orcodev">
-                    <span class="logo_bracket bracket-open">{</span>
-                    <span class="logo_or-text">or</span>
-                    <span class="logo_code-text">code
-                    </span>
-                    <span class="logo_v-text">v</span>
-                    <span class="logo_bracket bracket-closed">}</span>
-                </div>
+                <div class="aboutme__text-wrapper">
+                    <div>
+                        <h2 class="section__title open-sans-700">Soy Orlando</h2>
 
-                <p class="section__text roboto-regular">Desarrollador fullstack apasionado, dedicado a crear soluciones
-                    digitales innovadoras y atractivas que satisfagan las necesidades del cliente. El objetivo es
-                    brindar soluciones de alta calidad enfocadas en la experiencia del
-                    usuario, utilizando tecnologías modernas para garantizar la eficiencia de los sistemas y
-                    aplicaciones.
-                </p>
+                    </div>
+                    <div class="logo-orcodev">
+                        <span class="logo_bracket bracket-open">{</span>
+                        <span class="logo_or-text">or</span>
+                        <span class="logo_code-text">code
+                        </span>
+                        <span class="logo_v-text">v</span>
+                        <span class="logo_bracket bracket-closed">}</span>
+                    </div>
+                    <p class="section__text roboto-regular">Desarrollador fullstack apasionado, dedicado a crear
+                        soluciones
+                        digitales innovadoras y atractivas que satisfagan las necesidades del cliente. El objetivo
+                        es
+                        brindar soluciones de alta calidad enfocadas en la experiencia del
+                        usuario, utilizando tecnologías modernas para garantizar la eficiencia de los sistemas y
+                        aplicaciones.
+                    </p>
+                </div>
                 <img src="/img/check.svg" alt="imagen de check" class="section__check-img">
-                <!-- </div> -->
-
             </section>
             <section class="section__services" id="servicios">
                 <h2 class="section__services-title open-sans-700">Mis Servicios</h2>
@@ -110,27 +110,29 @@
                         performance.</p>
                 </div>
 
+            </section>
 
-                <section class="section__contact" id="contacto">
-                    <h2 class="section__title open-sans-700">Contacto</h2>
-                    <form action="" class="section__form">
-                        <label class="roboto-regular form-label" for="nombre">
-                            NOMBRE
-                        </label>
-                        <input type="text" name="nombre" id="nombre" class="form-input">
-                        <label class="roboto-regular form-label" for="email">
-                            EMAIL
-                        </label>
-                        <input type="email" name="email" id="email" class="form-input">
-                        <label class="roboto-regular form-label" for="mensaje">
-                            Mensaje
-                        </label>
-                        <textarea name="mensaje" id="mensaje" class="form-input"></textarea>
-                        <button class="form-button roboto-bold">Enviar</button>
-                    </form>
-                </section>
+            <section class="section__contact" id="contacto">
+                <h2 class="section__title open-sans-700">Contacto</h2>
+                <form action="" class="section__form">
+                    <label class="roboto-regular form-label" for="nombre">
+                        NOMBRE
+                    </label>
+                    <input type="text" name="nombre" id="nombre" class="form-input">
+                    <label class="roboto-regular form-label" for="email">
+                        EMAIL
+                    </label>
+                    <input type="email" name="email" id="email" class="form-input">
+                    <label class="roboto-regular form-label" for="mensaje">
+                        Mensaje
+                    </label>
+                    <textarea name="mensaje" id="mensaje" class="form-input" rows="10"></textarea>
+                    <button class="form-button roboto-bold">Enviar</button>
+                </form>
+            </section>
         </main>
         <footer class="roboto-regular" id="social">
+            <!-- <div class="wrapper__logo-copyright"> -->
             <div class="nav__logo">
                 <div class="logo-orcodev">
                     <span class="logo_bracket bracket-open">{</span>
@@ -149,6 +151,7 @@
                 </div>
             </div>
             <p class="footer__copyright roboto-regular">®️ Orcodev 2022</p>
+            <!-- </div> -->
             <div class="social__icons">
 
                 <a href="https://www.instagram.com/orcodev.fullstack/" class="social__icon">
