fix images path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <label for="menu" class="nav__label">
-                    <img src="/img/menu.svg" alt="menu icon" class="nav__img">
+                    <img src="img/menu.svg" alt="menu icon" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
                 <div class="nav__menu--mobile">
@@ -54,7 +54,7 @@
                 <div class="patron-puntos"></div>
                 <!-- </div> -->
                 <h1 class="title open-sans-700">Bienvenidos a mi Website</h1>
-                <img src="/img/orcodev-final.png" alt="imagen de orcodev" class="img-orcodev">
+                <img src="img/orcodev-final.png" alt="imagen de orcodev" class="img-orcodev">
             </header>
             <section class="section__aboutme" id="acerca-de-mi">
                 <div class="aboutme__text-wrapper">
@@ -79,13 +79,13 @@
                         aplicaciones.
                     </p>
                 </div>
-                <img src="/img/check.svg" alt="imagen de check" class="section__check-img">
+                <img src="img/check.svg" alt="imagen de check" class="section__check-img">
             </section>
             <section class="section__services" id="servicios">
                 <h2 class="section__services-title open-sans-700">Mis Servicios</h2>
 
                 <div class="section__card">
-                    <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
+                    <img src="img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
                     <h2 class="section__title roboto-bold">Aplicaciones Web</h2>
                     <p class="section__text roboto-regular">Desarrollo de plicaciones web modernas y responsivas
@@ -93,7 +93,7 @@
                         funcionalidades robustas de backend con Node.js y express.</p>
                 </div>
                 <div class="section__card">
-                    <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
+                    <img src="img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
                     <h2 class="section__title roboto-bold">Optimización SEO</h2>
                     <p class="section__text roboto-regular">mejoramiento del rendimiento y la visibilidad de
@@ -101,7 +101,7 @@
                         ranking en los motores de búsqueda.</p>
                 </div>
                 <div class="section__card">
-                    <img src="/img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
+                    <img src="img/pc.svg" alt="imagen de pantalla como encabezado para seccion de servicios"
                         class="section__img">
                     <h2 class="section__title roboto-bold">Mantenimiento</h2>
                     <p class="section__text roboto-regular">Servicios de mantenimiento, actualización y refactorización
@@ -155,15 +155,15 @@
             <div class="social__icons">
 
                 <a href="https://www.instagram.com/orcodev.fullstack/" class="social__icon">
-                    <img src="/img/ig.svg" alt="instagram icon" class="social__icon-img">
+                    <img src="img/ig.svg" alt="instagram icon" class="social__icon-img">
                     <span class="social__icon-text">Instagram</span>
                 </a>
                 <a href="https://www.linkedin.com/in/orlando-camacho/" class="social__icon">
-                    <img src="/img/link.svg" alt="linkedin icon" class="social__icon-img">
+                    <img src="img/link.svg" alt="linkedin icon" class="social__icon-img">
                     <span class="social__icon-text">Linkedin</span>
                 </a>
                 <a href="https://twitter.com/OCamacho2012" class="social__icon">
-                    <img src="/img/git.svg" alt="Github icon" class="social__icon-img">
+                    <img src="img/git.svg" alt="Github icon" class="social__icon-img">
                     <span class="social__icon-text">Twitter</span>
                 </a>
             </div>
